Updated wrapper version

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,10 @@ android {
         }
     }
 
-    viewBinding {
-        enabled = true
+    buildFeatures {
+        viewBinding {
+            enabled = true
+        }
     }
 }
 
